# NeuronalNetwork

./: .gitignore  .travis.yml  AbstractBaseLayer_8hpp.html  AbstractBaseLayer_8hpp_source.html  ActivationLayer_8hpp.html  ActivationLayer_8hpp_source.html  CMakeLists.txt  DataSet_8hpp.html  DataSet_8hpp_source.html  FCLayer_8hpp.html  FCLayer_8hpp_source.html  Network_8hpp.html  Network_8hpp_source.html  README.md  README_8md.html  annotated.html  annotated_dup.js  characters.cpp  classAbstractBaseLayer-members.html  classAbstractBaseLayer.html  classAbstractBaseLayer.js  classActivationLayer-members.html  classActivationLayer.html  classActivationLayer.js  classDataSet-members.html  classDataSet.html  classDataSet.js  classFCLayer-members.html  classFCLayer.html  classFCLayer.js  classNetwork-members.html  classNetwork.html  classNetwork.js  classes.html  dir_0b1cc3ee94e34f0eb5f1e06a94cd2e67.html  dir_0b1cc3ee94e34f0eb5f1e06a94cd2e67.js  example.cpp  example.sh  files.html  files_dup.js  (+12 more)
NeuronalNetwork/: AbstractBaseLayer.hpp  ActivationLayer.hpp  All  DataSet.hpp  FCLayer.hpp  Layer.hpp  Network.hpp
doc/: CMakeLists.txt  CMakeLists_OLD.txt  Doxyfile.in  getting_started.cpp  getting_started.dox
examples/: BinaryAdder.cpp  CMakeLists.txt  Characters.cpp  Example.cpp
examples/input/: extract.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_2.js  files_0.js  (+21 more)
test/: CMakeLists.txt  Test_DataSet.cpp  Test_Layers.cpp  Test_Linker.cpp  Test_Network.cpp  run_tests.sh
